<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main">


    <include layout="@layout/layout_search"
        android:id="@+id/rl_search"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_history_local"
        android:layout_below="@+id/rl_search"
        android:layout_above="@+id/ll_operation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_rounded_rectangle"/>

    <LinearLayout
        android:id="@+id/ll_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_items_top_bottom"
        android:paddingTop="@dimen/history_padding_top"
        android:paddingBottom="@dimen/history_padding_bottom"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/tv_select_all"
            style="@style/StyleTextButton"
            android:text="@string/select_all"/>

        <TextView
            android:id="@+id/tv_upload"
            style="@style/StyleTextButton"
            android:text="@string/upload"
            android:layout_marginLeft="@dimen/history_margin_left"
            android:layout_marginRight="@dimen/history_margin_right"/>

        <TextView
            android:id="@+id/tv_delete"
            style="@style/StyleTextButton"
            android:text="@string/delete"/>
    </LinearLayout>
</RelativeLayout>