<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/horizontal_margin"
    android:layout_marginRight="@dimen/horizontal_margin"
    android:layout_marginTop="12dp">
    <AutoCompleteTextView
        android:id="@+id/et_search_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:layout_marginTop="5dp"
        android:minHeight="@dimen/search_min_height"
        android:paddingLeft="@dimen/edit_padding"
        android:paddingRight="@dimen/edit_padding"
        android:textSize="@dimen/search_edit_text"
        android:completionThreshold="1"
        android:background="@drawable/bg_button"
        android:textColor="@color/text_normal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_search_name"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_search_time_start"
            android:layout_width="match_parent"
            android:hint="@string/start_time"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/search_min_height"
            android:layout_weight="1"
            android:textSize="@dimen/search_edit_text"
            android:background="@drawable/bg_button"
            android:paddingLeft="@dimen/edit_padding"
            android:paddingRight="@dimen/edit_padding"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/text_normal"/>
        <TextView
            android:id="@+id/tv_search_time_end"
            android:layout_width="match_parent"
            android:hint="@string/end_time"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/search_min_height"
            android:layout_weight="1"
            android:layout_marginLeft="3dp"
            android:textSize="@dimen/search_edit_text"
            android:background="@drawable/bg_button"
            android:paddingLeft="@dimen/edit_padding"
            android:paddingRight="@dimen/edit_padding"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/text_normal"/>
        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/search_min_height"
            android:layout_weight="0"
            android:paddingLeft="@dimen/horizontal_margin"
            android:paddingRight="@dimen/horizontal_margin"
            android:background="@drawable/selector_bg_button"
            android:layout_marginLeft="3dp"
            android:text="@string/search"
            android:textSize="@dimen/search_edit_text"
            android:textColor="@color/text_blue"
            android:gravity="center"
            android:layout_gravity="center"/>
    </LinearLayout>
</RelativeLayout>