<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/toolbar_dark"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/StyleTitleTextView"
            android:text="@string/config_import"/>
        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/iv_back"
                style="@style/StyleTitleBackImg"/>
            <TextView
                style="@style/StyleTitleBackToTextView"
                android:layout_toRightOf="@+id/iv_back"
                android:text="@string/config"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_main">

        <com.hearing.volometer.view.ViewPagerFixed
            android:id="@+id/vp_import_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_import_config"
            android:overScrollMode="never"/>

        <RadioGroup
            android:id="@+id/rg_import_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentTop="true">
            <com.hearing.volometer.view.DrawableRadioButton
                android:id="@+id/rb_local_config"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/local_file"
                android:textSize="20sp"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/selector_main_tab_text_color"
                android:background="@drawable/selector_main_tab_top"
                android:checked="true"
                android:textAlignment="center"
                />

            <com.hearing.volometer.view.DrawableRadioButton
                android:id="@+id/rb_net_config"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/net_file"
                android:textSize="20sp"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/selector_main_tab_text_color"
                android:background="@drawable/selector_main_tab_top"
                android:textAlignment="center"
                />
        </RadioGroup>
    </RelativeLayout>
</LinearLayout>