<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_title"
            style="@style/StyleTitleTextView"
            android:text="@string/measure"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_above="@+id/ll_button">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/table_11"
                            android:text="hello world"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"/>


                    </LinearLayout>

                </TableLayout>
            </RelativeLayout>

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_items_top_bottom"
        android:gravity="center_horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_start"
            style="@style/StyleTextButton"
            android:text="@string/start_measure" />

        <TextView
            android:id="@+id/tv_save"
            style="@style/StyleTextButton"
            android:layout_marginLeft="40dp"
            android:text="@string/start_save" />

    </LinearLayout>



</RelativeLayout>