<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/launcher_img_bg"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/iv_launch_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/launcher_img_logo_medium"
            android:layout_gravity="center"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/tv_launch_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:text="@string/company_abbr"
            android:typeface="monospace"
            android:textColor="@color/title_gray"
            android:textStyle="bold"
            android:textSize="30sp"/>
        <ImageView
            android:id="@+id/iv_launch_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/launcher_img_subtitle_medium"
            android:layout_gravity="center"
            android:scaleType="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/company"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/tv_website"/>
    <TextView
        android:id="@+id/tv_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/website"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:textAlignment="center"/>
</RelativeLayout>